# facility-multiagents

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  eval_report.json  eval_report.md  eval_report_dp.md  mcp.json  pyproject.toml  requirements.txt
data/: facility_memory.db
facilitymind/: __init__.py  cli.py  compare.py  dataio.py  eval.py  graph.py  knowledge.py  llm.py  models.json  state.py  tracer.py
facilitymind/agents/: __init__.py  approval.py  diagnose.py  dispatch.py  intake.py  qa.py  report.py
facilitymind/data/: tickets.json
facilitymind/mcp/: __init__.py  config.py  hub.py  providers.py
facilitymind/mcp/servers/: iot.py
facilitymind/memory/: __init__.py  decay.py  retrieval.py  store.py
facilitymind/web/: __init__.py  __main__.py  server.py
facilitymind/web/static/: index.html
logs/: trace-20260721.jsonl
scripts/: memory_maintenance.py  run_demo.py
