[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "facilitymind"
version = "0.1.0"
description = "A multi-agent operations center for facility and property management, built with LangGraph + MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
facilitymind = "facilitymind.cli:main"
facilitymind-eval = "facilitymind.eval:main"
facilitymind-web = "facilitymind.web.__main__:main"

[tool.setuptools.packages.find]
include = ["facilitymind*"]
